Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/peer_azwebapppeer.yml
+++ b/.github/workflows/peer_azwebapppeer.yml
@@ -42,9 +42,7 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-
+    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
@@ -54,13 +52,6 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
       
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_B178EE0821104B57933E5F227140061C }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_D450D2647F804C07B1078075FA73529F }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_905F14F08BAB4D9CAFF01F8A2F763B4D }}
-
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
@@ -68,4 +59,4 @@ jobs:
           app-name: 'AzWebAppPeer'
           slot-name: 'Production'
           package: .
-          
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_FF9A64BBF12740379565A3B904C6AEE9 }}
